# docker-poetry-app

./: .dockerignore  README.md  pyproject.toml
app/: my_app.py
docker/: Dockerfile  docker-build.sh
tests/: test_my_app.py
