[tool.poetry]
name = "docker-poetry"
version = "0.1.0"
description = ""
authors = ["Francesco Camillini <francesco.camillini@abilio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.5"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
line_length = 88